Troubleshooting CmakeList warning message regarding Opengl casing

--- a/playground/CMakeLists.txt
+++ b/playground/CMakeLists.txt
@@ -9,7 +9,7 @@ add_executable(playground src/Main.cpp)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
 find_package(SDL2 REQUIRED)
-find_package(OPENGL REQUIRED)
+find_package(OpenGL REQUIRED)
 
 message(STATUS "")
 message(STATUS "OpenGL:" ${OPENGL_INCLUDE_DIR} " " ${OPENGL_LIBRARIES})
