--- a/playground/CMakeLists.txt
+++ b/playground/CMakeLists.txt
@@ -16,6 +16,7 @@ add_subdirectory(src/resources)
 add_subdirectory(src/video)
 add_subdirectory(src/windowing)
 add_subdirectory(src/openGL)
+add_subdirectory(src/test)
 
 add_executable(playground src/Main.cpp)
 
