Trying to make jpeg loading run and failed miserably (with libJpeg and SDL_image)

--- a/playground/CMakeLists.txt
+++ b/playground/CMakeLists.txt
@@ -3,6 +3,7 @@ project (playground)
 
 file(MAKE_DIRECTORY target)
 
+set(CMAKE_FIND_FRAMEWORK LAST)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/target/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/target/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/target)
