--- a/playground/src/openGL/CMakeLists.txt
+++ b/playground/src/openGL/CMakeLists.txt
@@ -1,9 +1,10 @@
 add_library(openGL INTERFACE)
 target_include_directories(openGL INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 
+#OpenGL
 find_package(OpenGL REQUIRED)
-
-include_directories(${OPENGL_INCLUDE_DIR})
+target_link_libraries(openGL INTERFACE ${OPENGL_LIBRARIES})
+target_include_directories(openGL INTERFACE ${OPENGL_INCLUDE_DIR})
 
 # library link dependencies
-target_link_libraries(openGL INTERFACE core windowing video ${OPENGL_LIBRARIES})
+target_link_libraries(openGL INTERFACE core windowing video)
