Finally made libjpeg work, but had to give up boolean typedef since it was causing collision and issues. Removed some logs

--- a/playground/src/video/CMakeLists.txt
+++ b/playground/src/video/CMakeLists.txt
@@ -5,19 +5,14 @@ target_include_directories(video INTERFACE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_C
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
 
 # LibJpeg
-#find_package(JPEG REQUIRED) # could not make this f****g library work -> incompatibilities between detected header and library files
-#target_link_libraries(video INTERFACE ${JPEG_LIBRARY})
-#target_include_directories(video INTERFACE ${JPEG_INCLUDE_DIR})
+find_package(JPEG REQUIRED) # could not make this f****g library work -> incompatibilities between detected header and library files
+target_link_libraries(video INTERFACE ${JPEG_LIBRARY})
+target_include_directories(video INTERFACE ${JPEG_INCLUDE_DIR})
 
-# LibJpeg
+# LibPng
 find_package(PNG REQUIRED)
 target_link_libraries(video INTERFACE ${PNG_LIBRARY})
 target_include_directories(video INTERFACE ${PNG_INCLUDE_DIR})
-
-# SDL2_IMAGE
-find_package(SDL2_IMAGE REQUIRED)
-target_link_libraries(video INTERFACE ${SDL2_IMAGE_LIBRARY})
-target_include_directories(video INTERFACE ${SDL2_IMAGE_INCLUDE_DIR})
 
 # library link dependencies
 target_link_libraries(video INTERFACE resources math)
