Adding initial physics stuff. Adding physics demo.

--- a/playground/CMakeLists.txt
+++ b/playground/CMakeLists.txt
@@ -19,10 +19,11 @@ add_subdirectory(src/windowing)
 add_subdirectory(src/openGL)
 add_subdirectory(src/parser)
 add_subdirectory(src/audio)
+add_subdirectory(src/physics)
 add_subdirectory(src/test)
 
 add_executable(playground src/Main.cpp)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
 
-target_link_libraries(playground core windowing math openGL audio)
+target_link_libraries(playground physics core windowing math openGL audio)
