--- a/playground/CMakeLists.txt
+++ b/playground/CMakeLists.txt
@@ -1,4 +1,9 @@
-cmake_minimum_required (VERSION 2.6)
+#cmake_minimum_required (VERSION 2.6)
+
+cmake_minimum_required(VERSION 3.1.3)
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)  # not necessary, but encouraged
+
 project (playground)
 
 file(MAKE_DIRECTORY target)
