Restoring tests. Improving playground error handling. Adding mouse picking and coldet demo

--- a/playground/CMakeLists.txt
+++ b/playground/CMakeLists.txt
@@ -30,4 +30,4 @@ add_executable(playground src/Main.cpp)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
 
-target_link_libraries(playground physics core math openGL audio)
+target_link_libraries(playground physics core math openGL audio test)
