--- a/playground/src/physics/CMakeLists.txt
+++ b/playground/src/physics/CMakeLists.txt
@@ -2,4 +2,4 @@ add_library(physics INTERFACE)
 target_include_directories(physics INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 
 # library link dependencies
-target_link_libraries(physics INTERFACE physics)
+target_link_libraries(physics INTERFACE math)
