Refactoring geometry & intersection testing: Moved intersects and detectCollision outside of geometry and into intersectionTester class. This way it is a little bit less messy to add new geometry shapes

--- a/playground/src/geometry/CMakeLists.txt
+++ b/playground/src/geometry/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_library(geometry INTERFACE)
+add_library(geometry Geometry.cpp intersection/IntersectionTester.cpp)
 
-target_include_directories(geometry INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(geometry PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/intersection ${CMAKE_CURRENT_SOURCE_DIR}/tests)
 
 # library link dependencies
-target_link_libraries(geometry INTERFACE math)
+target_link_libraries(geometry PUBLIC math)
