--- a/playground/src/resources/CMakeLists.txt
+++ b/playground/src/resources/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(resources ResourceManager.cpp Resource.cpp FileParser.cpp)
+add_library(resources ResourceManager.cpp FileParser.cpp)
 target_include_directories(resources INTERFACE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/resources ${CMAKE_CURRENT_SOURCE_DIR}/adapters)
 
 # library link dependencies
