--- a/playground/lldb.settings
+++ b/playground/lldb.settings
@@ -2,3 +2,4 @@ type summary add -s "<${var.x}, ${var.y}, ${var.z}>" vector
 type summary add -s "<${var.x}, ${var.y}, ${var.z}>" vector3
 type summary add -s "origin:${var.origin}, halfSizes:${var.halfSizes}" AABB
 type summary add -s "origin:${var.origin}, radius:${var.radius}" Sphere
+type summary add -s "FileParser[${var.filename} ${var.line}:${var.column}]" FileParser
