--- a/playground/CMakeLists.txt
+++ b/playground/CMakeLists.txt
@@ -1,5 +1,8 @@
 #cmake_minimum_required (VERSION 2.6)
 
+
+add_definitions(-w) # hide warnings
+
 cmake_minimum_required(VERSION 3.1.3)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)  # not necessary, but encouraged
