Troubleshooting mesh adapter leaking vertex arrays. Troubleshooting generated vertex array not having path. Adding logs and debugger summaries

--- a/playground/lldb.settings
+++ b/playground/lldb.settings
@@ -1,9 +1,20 @@
 type summary add -s "<${var.x}, ${var.y}, ${var.z}>" vector
 type summary add -s "<${var.x}, ${var.y}, ${var.z}>" vector3
+
 type summary add -s "origin:${var.origin}, halfSizes:${var.halfSizes}" AABB
 type summary add -s "origin:${var.origin}, radius:${var.radius}" Sphere
+
 type summary add -s "${var.filename} ${var.line}:${var.column}" FileParser
 type summary add -s "${var.fileParser.filename} ${var.fileParser.line}:${var.fileParser.column}" JsonParser
+
 type summary add -s "${var.inputMimeType}->${var.outputMimeType} ${var.fileParser.filename}" ResourceLoadRequest
-type summary add -s "${var.mimeType} ${var.fileName} [${var.labels}]" Resource
 type summary add -s "${var.inputMimeType}->${var.outputMimeType}" ResourceAdapter
+
+type summary add -s "(id:${var.id}) [${var.mimeType}] [${var.fileName}] [${var.labels}]" Resource
+type summary add -s "(id:${var.id}) [${var.mimeType}] [${var.fileName}] [${var.labels}]" TextureResource
+type summary add -s "(id:${var.id}) [${var.mimeType}] [${var.fileName}] [${var.labels}]" CubeMapResource
+type summary add -s "(id:${var.id}) [${var.mimeType}] [${var.fileName}] [${var.labels}]" VertexArrayResource
+type summary add -s "(id:${var.id}) [${var.mimeType}] [${var.vertexArray}] [${var.texture}] [${var.labels}]" MeshResource
+
+type summary add -s "${var.shader}" Renderer
+type summary add -s "${var.shader - ${var.cubeMap} - ${var.box}" SkyboxRenderer
