Added StopWatch to playground to remove dependency between physics  runner and opengl runner. Also to be able to use stopwatch dt in other demos

--- a/playground/src/core/CMakeLists.txt
+++ b/playground/src/core/CMakeLists.txt
@@ -4,4 +4,4 @@ add_library(core Playground.cpp)
 target_include_directories(core INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 
 # library link dependencies
-target_link_libraries(core PUBLIC javaLike log resources)
+target_link_libraries(core PUBLIC javaLike log resources math)
