--- a/playground/lldb.settings
+++ b/playground/lldb.settings
@@ -3,6 +3,7 @@ type summary add -s "<${var.x}, ${var.y}, ${var.z}>" vector3
 
 type summary add -s "origin:${var.origin}, halfSizes:${var.halfSizes}" AABB
 type summary add -s "origin:${var.origin}, radius:${var.radius}" Sphere
+type summary add -s "origin:${var.origin}, normal:${var.normal}" Plane
 
 type summary add -s "${var.filename} ${var.line}:${var.column}" FileParser
 type summary add -s "${var.fileParser.filename} ${var.fileParser.line}:${var.fileParser.column}" JsonParser
